<resources>
    <string name="app_name">Moviebeam</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_recipes">Recipes</string>
    <string name="title_activity_recipe_details">Recipe Details</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >4 characters</string>
    <string name="invalid_username_and_password">please check your username and password</string>
    <string name="add_to_favorite">Add to favorite</string>
    <string name="server_error">Server Error</string>
    <string name="fetch_weather_data">Fetch Weather Data</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hotel_logo">Hotel Logo</string>
    <string name="weather_image">Weather Image</string>
    <string name="back">Back</string>
    <string name="menu_button_image">Menu Button Image</string>
    <string name="hotel_information">Hotel Information</string>

    <string name="theme_success">Theme Success</string>
    <string name="account_setup_success">Account Setup Success</string>
    <string name="weather_success">Weather Success</string>
    <string name="date_time_success">Date Time Success</string>

    <string name="media_url_mp3">https://storage.googleapis.com/exoplayer-test-media-0/Jazz_In_Paris.mp3</string>
    <string name="media_url_mp4">https://storage.googleapis.com/exoplayer-test-media-0/BigBuckBunny_320x180.mp4</string>
    <string name="media_url_dash"><![CDATA[https://www.youtube.com/api/manifest/dash/id/bf5bb2419360daf1/source/youtube?as=fmp4_audio_clear,fmp4_sd_hd_clear&sparams=ip,ipbits,expire,source,id,as&ip=0.0.0.0&ipbits=0&expire=19000000000&signature=51AF5F39AB0CEC3E5497CD9C900EBFEAECCCB5C7.8506521BFC350652163895D4C26DEE124209AA9E&key=ik0]]></string>


    <string name="movie_image">Movie Image</string>

    //Movies
    <string name="rent_now">Rent Now %1$s 24 HRS $%2$s</string>
    <string name="watch_free">Watch Now Free</string>
    <string name="watch_trailer">Watch Trailer</string>
    <string name="price_dollar">$ %1$s</string>
    <string name="app_image">App Image</string>
    <string name="OK">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="status">Status</string>
    <string name="gate">Gate</string>
    <string name="terminal">Terminal</string>
    <string name="time">Time</string>
    <string name="airlines">Airlines</string>
    <string name="destination">Destination</string>
    <string name="flight_no">Flight No</string>
    <string name="switch_to_departure">Switch to Departure</string>
    <string name="switch_to_arrival">Switch to Arrival</string>
    <string name="sunrise">Sunrise</string>
    <string name="humidity">Humidity</string>
    <string name="dev_point">Dev Point</string>
    <string name="sunset">Sunset</string>
    <string name="visibility">Visibility</string>
    <string name="wind">Wind</string>
    <string name="high">High :</string>
    <string name="low">Low :</string>
    <string name="details">Details</string>
    <string name="headlines">Headlines</string>
    <string name="hotel_info_image">Hotel Info Image</string>
    <string name="unacceptable">Unacceptable</string>
    <string name="thank_you">Thank You</string>
    <string name="thank_you_for_your_feedback">Thank you for your feedback</string>
    <string name="search">Search</string>
    <string name="channel_logo">Channel Logo</string>

    <string name="please_wait_stb_box_is_initialising">"Welcome\nApplication is initializing\nOne moment please</string>
    <string name="channel_no">Channel No. %1$s</string>
    <string name="toiletry_requests">Toiletry Requests</string>
    <string name="send_request">Send Request</string>
    <string name="please_click_ok_to_select_deselect_the_items_and_press_to_increase_decrease_the_quantity">Please click OK to select/deselect the items and press +/- to increase/decrease the quantity</string>
    <string name="items">Items</string>
    <string name="toothpaste">Toothpaste</string>
    <string name="delete">-</string>
    <string name="button_text">\\u00e2\\u0080\\u0093</string>
    <string name="add_symbol">+</string>
    <string name="minus_symbol">-</string>
    <string name="error">ERROR</string>
    <string name="please_select_items_to_send_request">Please select items to send request</string>
    <string name="confirm_service_n_your_request_for_following_items_has_been_received_and_will_n_be_serviced_shortly">Confirm Service \n Your Request for following items has been received and will \n be serviced shortly</string>
    <string name="qty">Qty</string>
    <string name="background_image">Background Image</string>
    <string name="confirm">Confirm</string>
    <string name="total_charge">Total Charge</string>
    <string name="total">Total</string>
    <string name="cost">Cost</string>
    <string name="time_icon">Time Icon</string>
    <string name="date_icon">Date Icon</string>
    <string name="total_content_count_icon">Total Content Count Icon</string>
    <string name="network_icon">Network Icon</string>
    <string name="sync_icon">Sync Icon</string>
    <string name="offerText">Get 10% off on Your Order, click button below to redeem</string>
    <string name="product_is_currently_unavailable">Product is currently unavailable.</string>
    <string name="please_contact_the_front_desk_for_assistance">Please contact the Front Desk for assistance.</string>
    <string name="call_front_desk_to_activate_moviebeam_services">Call Front Desk to activate Moviebeam Services.</string>
    <string name="watch_from_start">Watch From Start</string>
    <string name="continue_watch">Continue Watching</string>
    <string name="watch_now">Watch Now</string>
    <string name="confirm_rental">CONFIRM RENTAL</string>
    <string name="rental_price_confirm">$%2$s (+Tax) will be charged to your Account</string>
    <string name="call_front_desk">Call Front Desk to activate Moviebeam Services</string>
    <string name="adult">Adult</string>
    <string name="new_releases">New Releases</string>
    <string name="adult_daypass_disclaimer">
    *Limited time offer. All applicable texes extra.
  \n**Movies available for a period of 24 hrs from purchase or \nupto checkout, whichever is earlier.
    </string>
    <string name="purchase_adult_day_pass">PURCHASE ADULT DAY PASS</string>
    <string name="adult_pass_price">Watch our entire Adult movie library for 24hrs or \nuntil the time you checkout for one low price of \n$%2$s.</string>
    <string name="buy_now">Buy Now</string>
    <string name="insufficient_balance">" Insufficient Balance"</string>
    <string name="moviebeam_logo">Moviebeam Logo</string>
    <string name="stb_registered">STB Registered:</string>
    <string name="pending">Pending</string>
    <string name="ua">UA:</string>
    <string name="serial_no">Serial No:</string>
    <string name="qr_code">QR Code</string>
    <string name="ip_address">IP Address:</string>
    <string name="net_mask">Net Mask:</string>
    <string name="gateway">Gateway:</string>
    <string name="connectivity">Connectivity:</string>
    <string name="model_name">Model Name:</string>
    <string name="app_software_version">App Software Version:</string>
    <string name="adult_disabled">Adult Disabled</string>
    <string name="adult_content_is_disabled">Adult content is disabled.</string>
    <string name="call_the_front_desk_to_enable_adult_content">Call the front desk to enable adult content</string>
    <string name="mature_content_warning">MATURE CONTENT WARNING</string>
    <string name="mature_content_disabled">Mature Content Disabled</string>
    <string name="mature_content_warning_note">The content in this section is for <font color="#0096a6"><i>ADULTS ONLY</i></font> and <font color="#0096a6"><i>NOT</i></font> suitable for minors and people offended by sexually explicit material.
        \nClick \'CANCEL\' to go back. Click \'CONTINUE\' if you agree to view the content.</string>
    <string name="tv_continue">Continue</string>
    <string name="skip">Skip</string>
    <string name="parental_control">Parental Control</string>
    <string name="mature_content_warning_parental_note">Some of the Movies and Shows available to you may be inappropriate for younger audiences. To restrict access to such content please enable Parental Control below.
        \n\nNo Charge will be posted on your folio for any of the free movies.</string>
    <string name="adult_locked">Adult Locked</string>
    <string name="adult_content_is_locked">Adult content is locked.</string>
    <string name="to_enable_adult_content_enter_parental_code">To enable adult content enter parental code.</string>
    <string name="enter_parental_code">Enter Parental Code</string>
    <string name="mature_content_disabled_note">Some of the Movies and Shows available to you may be inappropriate for younger audiences. To prevent inappropriate access, the hotel has enabled Parental Controls for your Convenience. Please disable Parental Controls to access the Content.
        \n\nNo Charge will be posted on your folio for any of the free movies.</string>
    <string name="enter_old_pass_code">Enter Old Passcode</string>
    <string name="enter_new_pass_code">Enter New Passcode</string>
    <string name="parental_control_desc">Use the arrow key and hit OK button to set passcode. Use stop button to <font color="#FFB81A">CANCEL</font> or <font color="#FFB81A">START</font> again.
        \nDO NOT USE NUMERIC KEYS ON REMOTE to set the passcode
        \nPlease call frontdesk for assistance</string>
    <string name="app_world_clear_credentials_message">Your credentials have been successfully cleared. Please login again to access your application.</string>

    <string name="rich_input_feed_url" translatable="false">http://commondatastorage.googleapis.com/android-tv/rich_tv_input_xmltv_feed.xml</string>
    <string name="refreshing_ui">Refreshing UI...</string>
    <string name="new_session_requested">New Session Requested</string>
    <string name="information">INFORMATION</string>
    <string name="you_have_a_new_message">You have a new message.</string>
    <string name="clear_credentials">Clear Credentials</string>
    <string name="disconnected_mode">Disconnected Mode</string>
    <string name="connected_mode">Connected Mode</string>
    <string name="home_icon">Home Icon</string>
    <string name="press">Press</string>
    <string name="netflix">Netflix</string>
    <string name="prime_video">Prime Video</string>
    <string name="channel_no_is_not_available">Channel No. %1$s is not available!</string>
    <string name="app_icon">App Icon</string>

    <string name="clear_credentials_menu_text">Please clear your app credentials before checkout.</string>
    <string name="no_news_found">No news found!</string>
    <string name="app_not_available">App is not available.</string>


</resources>