<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/text_color_secondary"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout_disabled"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adult_disabled"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_28"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_24"
            android:text="@string/adult_content_is_disabled"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_20" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/call_the_front_desk_to_enable_adult_content"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_20" />

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_24"
            android:text="@string/OK"
            android:textAllCaps="false"
            android:background="@drawable/btn_bg_gradient_default"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_MCW"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mature_content_warning"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_28"
            android:textStyle="bold" />

        <TextView
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_24"
            android:lineSpacingExtra="4dp"
            android:justificationMode="inter_word"
            android:text="@string/mature_content_warning_note"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_20" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/Cancel"
            android:background="@drawable/btn_bg_gradient_default"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_continue"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/tv_continue"
            android:background="@drawable/btn_bg_gradient_default"
            android:layout_marginTop="@dimen/dp_16"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_parental_MCW"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mature_content_warning"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_28"
            android:textStyle="bold" />

        <TextView
            android:layout_width="620dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_24"
            android:lineSpacingExtra="6dp"
            android:gravity="center"
            android:drawablePadding="@dimen/dp_16"
            android:text="@string/mature_content_warning_parental_note"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_18"
            app:drawableStartCompat="@drawable/adult" />

        <Button
            android:id="@+id/btn_parental_control"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/parental_control"
            android:background="@drawable/btn_bg_gradient_default"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_skip"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:text="@string/skip"
            android:background="@drawable/btn_bg_gradient_default"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_parental_MCD"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mature_content_disabled"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_28"
            android:textAllCaps="true"
            android:textStyle="bold" />

        <TextView
            android:layout_width="620dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_24"
            android:lineSpacingExtra="6dp"
            android:gravity="center"
            android:drawablePadding="@dimen/dp_16"
            android:text="@string/mature_content_warning_parental_note"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_24"
            app:drawableStartCompat="@drawable/adult" />

        <Button
            android:id="@+id/btn_mcd_parental_control"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/parental_control"
            android:textAllCaps="false"
            android:textSize="@dimen/sp_16"
            android:background="@drawable/btn_bg_gradient_default"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_mcd_ok"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:text="@string/OK"
            android:background="@drawable/btn_bg_gradient_default"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_locked"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adult_locked"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_28"
            android:textAllCaps="true"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_24"
            android:lineSpacingExtra="6dp"
            android:gravity="center"
            android:text="@string/adult_content_is_locked"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_22"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="6dp"
            android:gravity="center"
            android:text="@string/to_enable_adult_content_enter_parental_code"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16"
            />

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/baseline_lock_24"
            android:layout_margin="@dimen/dp_10"
            />

        <Button
            android:id="@+id/btn_enter_parental_code"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:text="@string/enter_parental_code"
            android:textAllCaps="false"
            android:textSize="@dimen/sp_16"
            android:layout_marginTop="@dimen/dp_16"
            android:background="@drawable/btn_bg_gradient_default"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_code_cancel"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:textAllCaps="false"
            android:text="@string/Cancel"
            android:background="@drawable/btn_bg_gradient_default"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>