<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#323232"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.refreshingui.RefreshingUiActivity">

    <TextView
        android:id="@+id/tv_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/manrope_semibold_600"
        android:gravity="center_horizontal"
        android:text="@string/information"
        android:textSize="@dimen/sp_24" />

    <TextView
        android:id="@+id/tv_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_24"
        android:fontFamily="@font/manrope_semibold_600"
        android:gravity="center_horizontal"
        android:text="@string/new_session_requested"
        android:textSize="@dimen/sp_18" />

    <TextView
        android:id="@+id/tv_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/manrope_semibold_600"
        android:gravity="center_horizontal"
        android:text="@string/refreshing_ui"
        android:textSize="@dimen/sp_18" />

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_bg_gradient_default"
        android:text="@string/OK"
        android:textSize="@dimen/sp_15"
        android:visibility="gone" />

</LinearLayout>