<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.guestservice.feedback.thankyou.ThankYouActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_20"
        android:fontFamily="@font/manrope_semibold_600"
        android:text="@string/thank_you"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_24"
        app:layout_constraintBottom_toTopOf="@+id/tv_thankyou"
        app:layout_constraintEnd_toEndOf="@+id/tv_thankyou"
        app:layout_constraintStart_toStartOf="@+id/tv_thankyou" />

    <TextView
        android:id="@+id/tv_thankyou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/manrope_semibold_600"
        android:text="@string/thank_you_for_your_feedback"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_18"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@drawable/btn_bg_gradient_default"
        android:text="@string/OK"
        app:layout_constraintEnd_toEndOf="@+id/tv_thankyou"
        app:layout_constraintStart_toStartOf="@+id/tv_thankyou"
        app:layout_constraintTop_toBottomOf="@+id/tv_thankyou" />

</androidx.constraintlayout.widget.ConstraintLayout>